--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,145 @@
-.App {
+body{
+  margin: 0;
+  background:linear-gradient(-45deg,#ee7752,#e73c7e,#23a6d5,#23d5ab);
+  background-size:400% 400%;
+  animation:gradient 15s ease infinite;
+
+}
+
+
+@keyframes gradient{
+  0%{
+    background-position: 0% 50%;
+  } 
+  50%{
+    background-position: 100% 50%;
+  } 
+  100%{
+    background-position: 0% 50%;
+  }
+}
+
+label{
+  margin-top: 20px;
+  color:black;
+  font-size:linear;
+}
+
+.Add-Button{
+  background-color: rgb(10,65,50);
+  border:none;
+  color:white;
+  padding:10px 28px;
+  text-align: center;
+  font-size:30px;
+}
+
+.Submit-Button{
+  background-color:black;
+  border:none;
+  color:white;
+  padding:10px 28px;
+  text-align: center;
+  margin-top: 40px;
+  width:200px;
+  margin-left: 10px;
+}
+
+.Edit-Button{
+background-color:#FF4E00;
+border:none;
+color:white;
+padding:10px 28px;
+text-align:center;
+width:400px;
+
+}
+
+.Buttons{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom:10px;
+}
+
+.upload-data{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom:10px;
+}
+
+.panel-heading{
+  margin-top: 20px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.upload-btn-wrapper{
+  position: relative;
+  overflow: hidden;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom:10px;
+}
+
+.file-btn{
+  border:2px solid gray;
+  color:gray;
+  background-color:white;
+  padding:8px 20px;
+  border-radius:8px;
+  font-size: 20px;
+  font-weight:bold;
+}
+ 
+.upload-btn-wrapper input[type=file]{
+  font-size:100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
+
+.indexpagecard{
+  width:auto;
+  height:auto;
+  background-color:white;
+  margin:auto;
+  display:block;
+  margin-top:60px;
+  opacity: 0.5;
+  padding-top:10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-style: outset;
+  border-left: 50px solid pink;
+}
+
+.footer{
+  margin-left: 10px;
+  bottom:0;
+  margin-right:10px;
+  height: 10rem;
+  align-self: center;
+  padding-top: 50px;
+  margin-top:50px;
+  color:black;
+  opacity:0,06;
+
+
+}
+
+.btn{
+  margin-bottom: 10px;
+}
+
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +176,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
